tests/NormalTests/paczka2/big_fuzzy/48103537.err
Error in line 2: S573 S759 29,8
Error in line 21: XzVrjaedNa7 S573 76,33
Error in line 19: XzVrjaedNa7 A217 17,7
Error in line 23: S573 S919 16,8
Error in line 34: sp7gXQV6j S573 78,1
Error in line 28: XzVrjaedNa7 S573 38,2
Error in line 44: S573 S759 18,8
Error in line 60: S573 S573 82,5
Error in line 63: S573 S919 -3,9
Error in line 53: RX5T S759 195,2
Error in line 58: QzahG3Z S919 8,0
Error in line 61: S573 S919 52,2
Error in line 66: RX5T S573 19,6
Error in line 78: 3ruY2yN S759 56,0
Error in line 82: XzVrjaedNa7 S759 7,7
Error in line 87: RX5T S919 204,9
Error in line 81: XzVrjaedNa7 S759 50,5
Error in line 98: QzahG3Z S759 90,4
Error in line 104: S573 S759 12,9
Error in line 110: XzVrjaedNa7 S919 35,9
Error in line 106: 3ruY2yN S573 310,9
Error in line 126: Yu6rNLSu S919 59,5
Error in line 113: QzahG3Z A217 14,3
Error in line 133: S573 S919 61,4
Error in line 137: S573 S573 14,7
Error in line 136: 3ruY2yN S919 39,8
Error in line 157: XzVrjaedNa7 S919 58,64
Error in line 176: Yu6rNLSu S919 58,0
Error in line 167: QzahG3Z S573 48,1
Error in line 164: 3ruY2yN A217 18,4
Error in line 190: S573 S573 65,2
Error in line 197: Yu6rNLSu S573 13,3
Error in line 203: 3ruY2yN A217 62,69
Error in line 189: QzahG3Z S759 63,2
Error in line 204: QzahG3Z S573 14,3
Error in line 207: 3ruY2yN A217 5,0
Error in line 209: 3ruY2yN S759 19,4
Error in line 218: Yu6rNLSu A217 80,5
Error in line 208: RX5T S919 96,0
Error in line 231: QzahG3Z A217 96,5
